--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,18 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
+		<script>
+			MathJax = {
+				tex: {
+				  inlineMath: [['$', '$'], ['\\(', '\\)']]
+				},
+				svg: {
+				  fontCache: 'global'
+				}
+			  };
+		</script>
+		<script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js" id="MathJax-script"></script>
+		
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="skeleton">
 		<div style="display: contents">%sveltekit.body%</div>
