coding page issue has been resolved

--- a/src/app.html
+++ b/src/app.html
@@ -20,4 +20,4 @@
 	<body data-sveltekit-preload-data="hover" data-theme="skeleton">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
-</html>
+</html><body data-theme="modern"></body>
